--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
+<h1>Create Account</h1>
+<br>
 <%= form_for :user, url: '/users' do |f| %>
-    Username: <%= f.text_field :username %>
-    Email: <%= f.text_field :email %>
-    Password: <%= f.password_field :password %>
-    Password Confirmation: <%= f.password_field :password_confirmation %>
+    Username: <%= f.text_field :username %><br>
+    Email: <%= f.text_field :email %><br>
+    Password: <%= f.password_field :password %><br>
+    Password Confirmation: <%= f.password_field :password_confirmation %><br>
     <%= f.submit "Submit" %>
   <% end %> 
