--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,4 +1,4 @@
 <%= image_tag "#{@job.company_logo}", height: 100, width: 100 %><br>
 <h1><%= @job.company %> </h1>
 <%= @job.title %><br>
-<%= sanitize @job.description %>
+<%= sanitized_description(@job) %>
