--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,5 +1,6 @@
-<%= display_logo(@job) %><br>
+<%= display_logo(@job) %><br><br>
 <h1><%= @job.company %> </h1>
+<h4><%= @job.title %></h4><br>
 <h5><%= @job.posted_at %></h5>
 <%= @job.title %><br>
 <%= sanitized_description(@job) %>
