--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
+  <a class="logo-image" href="/"><img src="/images/usain_git.png" width="50"></a>
     <a class="navbar-brand" href="/">GitJobs</a>
     <% if logged_in? %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,24 +16,18 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            <%= current_user.username %>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Your Interested Jobs</a></li>
+            <li><a class="dropdown-item" href= '/'>Logout</li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropwdown-item">
+            <%= link_to "Logout", logout_path, method: "post" %>
+            </form></a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    <% else %>
+        <% else %>
         <li class="nav-item">
             <a class="nav-link" href="/users/new">Sign Up</a>
         </li>
@@ -40,6 +35,7 @@
             <a class="nav-link" href="/login">Login</a>
         </li>
     <% end %>
+      </ul>
     </div>
   </div>
 </nav>
