--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Current Job Postings</h3><br><br>
 
-<% @jobs.each do |job| %>
+<% @jobs.reverse.each do |job| %>
     <%= link_to "#{job.company} - #{job.title} located in #{job.location}", "/jobs/#{job.id}" %>
     <br><br>
 <% end %>
