--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,7 +5,7 @@
 <%= @job.title %><br>
 <%= sanitized_description(@job) %>
 
-<h3>Write A New Review About This Position</h3>
+<h4>Write A New Review About This Position</h4>
    <p> <%= form_for [@job, @review] do |r| %>
         <%= r.label :title %>
         <%= r.text_field :title %><br>
@@ -13,9 +13,8 @@
         <%= r.text_area :content %><br>
     <%= r.submit 'Create Review' %>
     <% end %></p>
-    <h3>Reviews About This Position </h3>
-
-    <p><% @reviews.each do |review| %>
+    <h4>Reviews About This Position </h4>
+    <p><% @reviews.reverse.each do |review| %>
         <strong><%= review.title %></strong> <%if review.user %>
         <%= "by #{review.user.username}" %>
         <%end %> <br>
