Fixed logic for new review form

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,6 +3,6 @@
     <%= f.text_field :title %><br>
     <%= f.label :content %>
     <%= f.text_area :content %>
-    <%= fields_for_helper(f) %>
+    <%= fields_for_helper(f) %><br>
     <%= f.submit 'Create Review' %>
     <% end %>
