--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,3 +1,13 @@
+<%= form_for @user_job, url: user_jobs_path, method: :post do |u| %>
+    <%= u.hidden_field :job_id, value: @job.id %>
+    <%= u.hidden_field :user_id, value: current_user.id %>
+    <%= u.label :interested %>
+    <%= u.check_box :interested, checked: (true if @user_job.interested == true)%><br>
+    <%= u.label :applied %><br>
+    <%= u.check_box :applied, checked: (true if @user_job.interested == true)%><br>
+<%= u.submit 'Save' %>
+<% end %>
+
 <%= display_logo(@job) %><br><br>
 <h1><%= @job.company %> </h1>
 <h4><%= @job.title %></h4><br>
