--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,12 +1,11 @@
-<%= form_for @user_job, url: user_jobs_path, method: :post do |u| %>
-    <%= u.hidden_field :job_id, value: @job.id %>
-    <%= u.hidden_field :user_id, value: current_user.id %>
-    <%= u.label :interested %>
-    <%= u.check_box :interested, checked: (true if @user_job.interested == true)%><br>
-    <%= u.label :applied %><br>
-    <%= u.check_box :applied, checked: (true if @user_job.interested == true)%><br>
-<%= u.submit 'Save' %>
+<% if @user_jobs.find_by(job_id: @job.id, user_id: current_user.id) %>
+<% @user_job = @user_jobs.find_by(job_id: @job.id, user_id: current_user.id) %>
+<%= render :partial => "/user_jobs/edit", locals: {user_job: @user_job} %>
+<% else %>
+<% @user_job = UserJob.new %>
+<%= render :partial => "/user_jobs/new", locals: {user_job: @user_job} %>
 <% end %>
+
 
 <%= display_logo(@job) %><br><br>
 <h1><%= @job.company %> </h1>
