--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,19 +8,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout" method = "post">Logout</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <%= current_user.username %>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Your Interested Jobs</a></li>
-            <li><a class="dropdown-item" href= '/'>Logout</li>
+            <li><a class="dropdown-item" href="/">Jobs You Are Interested In</a></li>
+            <li><a class="dropdown-item" href= '/'>Jobs You Are Applying To</li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropwdown-item">
             <%= link_to "Logout", logout_path, method: "post" %>
