--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'errors/errors', locals: {model: @review } %>
+
 <%= form_with(model: [@job, @review]) do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title %><br>
