--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
   <a class="logo-image" href="/"><img src="/images/usain_git.png" width="50"></a>
-    <a class="navbar-brand" href="/">GitJobs</a>
+    <a class="navbar-brand" href="/jobs">GitJobs</a>
     <% if logged_in? %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -13,8 +13,8 @@
             <%= current_user.username %>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/">Jobs You Are Interested In</a></li>
-            <li><a class="dropdown-item" href= '/'>Jobs You Are Applying To</li>
+            <li><a class="dropdown-item" href="/">Home Page</a></li>
+            <li><a class="dropdown-item" href= '/'>Job Postings List</li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropwdown-item">
             <%= link_to "Logout", logout_path, method: "post" %>
