--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,12 @@
-<%= render partial: 'errors/errors', locals: {model: @review } %>
+
 
 <%= form_with(model: [@job, @review]) do |f| %>
     <%= f.label :title %>
+    
     <%= f.text_field :title %><br>
     <%= f.label :content %>
     <%= f.text_area :content %>
     <%= fields_for_helper(f) %><br>
     <%= f.submit 'Create Review' %>
     <% end %>
+    </div>
