--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create Account</h1>
 <br>
-<%= render partial: 'errors/errors', locals: {model: @user} if @user %>
+<div class="field_with_errors">
 <%= form_for :user, url: '/users' do |f| %>
     Username: <%= f.text_field :username %><br>
     Email: <%= f.text_field :email %><br>
@@ -8,3 +8,4 @@
     Password Confirmation: <%= f.password_field :password_confirmation %><br>
     <%= f.submit "Submit" %>
   <% end %> 
+  </div>
