--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,12 @@
   </head>
 
   <body>
+  
   <%= render "layouts/navbar" %>
   <%= flash[:message] if flash[:message] %>
     <%= yield %>
-    <% if logged_in? %>
-    <%= link_to "Logout", logout_path, method: "post" %>
+    <% if !logged_in? %>
+    <%= button_to "Log In With Google", "/auth/google_oauth2" %>
     <% end %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
