--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create Account</h1>
 <br>
-
+<%= render partial: 'errors/errors', locals: {model: @user} if @user %>
 <%= form_for :user, url: '/users' do |f| %>
     Username: <%= f.text_field :username %><br>
     Email: <%= f.text_field :email %><br>
