--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,20 +14,15 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/">Home Page</a></li>
-            <li><a class="dropdown-item" href= '/'>Job Postings List</li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropwdown-item">
-            <%= link_to "Logout", logout_path, method: "post" %>
-            </form></a></li>
+            <li><a class="dropdown-item" href= "/jobs">Job Postings</li>
+            <li><%= link_to 'Logout', logout_path, class: 'dropdown-item', method: 'delete' %>
+            </a></li>
           </ul>
         </li>
         <% else %>
-        <li class="nav-item">
-            <a class="nav-link" href="/users/new">Sign Up</a>
-        </li>
-        <li class="nav-item">
+        
+            <a class="nav-link" href="/signup">Sign Up</a>
             <a class="nav-link" href="/login">Login</a>
-        </li>
     <% end %>
       </ul>
     </div>
