--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,3 +8,7 @@
     Password Confirmation: <%= f.password_field :password_confirmation %><br>
     <%= f.submit "Submit" %>
   <% end %> 
+
+  <% if !logged_in? %>
+    <%= button_to "Log In With Google", "/auth/google_oauth2" %>
+    <% end %>
