Made edit and delete routes for reviews

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,6 +1,6 @@
 Reviews for  <%= link_to "#{@job.company} - #{@job.title} located in #{@job.location}", "/jobs/#{@job.id}" %><br><br>
 <% @reviews.each do |review|%>
     Review by <%= review.user.username %> -
-    <%= review.title %> -
+    <%= link_to review.title, "/reviews/#{review.id}" %> -
     <%= review.content %><br>
     <% end %>
