--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,5 +2,6 @@ Reviews for  <%= link_to "#{@job.company} - #{@job.title} located in #{@job.loca
 <% @reviews.each do |review|%>
     Review by <%= review.user.username %> -
     <%= link_to review.title, "/reviews/#{review.id}" %> -
-    <%= review.content %><br>
+    <%= review.content %>
+
     <% end %>
