Moved links to buttons and made some styling chanes

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,5 @@
-<h3>Current Job Postings</h3><br><br>
+<%= button_to "Jobs You Have Saved", home_path, :method => "get", class: "home_buttons"%>
+<h3>Current Job Postings</h3><br>
 
 <% @jobs.reverse.each do |job| %>
     <%= link_to "#{job.company} - #{job.title} located in #{job.location}", "/jobs/#{job.id}" %>
