--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,6 +2,6 @@
 <%= @review.content %>
 
 <% if !not_authorized %>
-<%= link_to 'Edit', edit_review_path(@review) %>
-<%= link_to "Delete Review", review_path(@review), method: "delete" %>
+<%= button_to 'Edit', edit_review_path(@review), :method => "get" %>
+<%= button_to "Delete Review", review_path(@review), method: "delete" %>
 <% end %>
