--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,10 +1,11 @@
-<br><br><br>
-<h4>Jobs You Are Interested In </h4><br>
+<%= button_to "Check Out New Job Postings", jobs_path, :method => "get", class: "home_buttons" %>
+<br>
+<h4>Jobs You Are Interested In </h4>
 <% interest_list.each do |uj| %>
     <%= link_to find_job_from_user_job(uj), "/jobs/#{uj.job_id}" %><br>
 <%end%>
 
-<h4>Jobs You Are Applying To</h4><br>
+<h4>Jobs You Are Applying To</h4>
 <% applied_list.each do |uj| %>
     <%= link_to find_job_from_user_job(uj), "/jobs/#{uj.job_id}" %><br>
 <%end%>
