--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,6 +1,7 @@
 <%= display_logo(@job) %><br><br>
 <h1><%= @job.company %> </h1>
 <h4><%= @job.title %></h4><br>
+<%= button_to "Reviews About This Position", job_reviews_path(@job), :method => "get" %><br>
 <% if @user_jobs.find_by(job_id: @job.id, user_id: current_user.id) %>
 <% @user_job =  @user_jobs.find_by(job_id: @job.id, user_id: current_user.id)%>
 <%= render :partial => "/user_jobs/edit", locals: {user_job: @user_job} %>
