--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,11 +2,13 @@
 <br>
 <%= render partial: 'errors/errors', locals: {model: @user} if @user %>
 <%= form_for :user, url: '/users' do |f| %>
-    Username: <%= f.text_field :username %><br>
-    Email: <%= f.text_field :email %><br>
-    Password: <%= f.password_field :password %><br>
-    Password Confirmation: <%= f.password_field :password_confirmation %><br>
-    <%= f.submit "Submit" %>
+    <%= f.label :username %>
+    <%= f.text_field :username %><br><br>
+    <%= f.label :email %>
+    <%= f.text_field :email %><br><br>
+    <%= f.label :password %>
+    <%= f.text_field :password %><br><br>
+    Password Confirmation <%= f.text_field :password_confirmation %><br><br>    <%= f.submit "Submit" %>
   <% end %> 
 
   <br>
