--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+    <% if logged_in? %>
+    <div class="container-fluid">
   <a class="logo-image" href="/"><img src="/images/usain_git.png" width="50"></a>
     <a class="navbar-brand" href="/jobs">GitJobs</a>
-    <% if logged_in? %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,7 +20,7 @@
           </ul>
         </li>
         <% else %>
-        
+        <a class="logo-image" ><img src="/images/usain_git.png" width="50"></a>
             <a class="nav-link" href="/signup">Sign Up</a>
             <a class="nav-link" href="/login">Login</a>
     <% end %>
