--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,8 @@
     <div class="container-fluid">
   <a class="logo-image" href="/"><img src="/images/usain_git.png" width="50"></a>
     <a class="navbar-brand" href="/jobs">GitJobs</a>
+    <a class="nav-link" href="/">Home Page</a>
+    <a class="nav-link" href= "/jobs">Job Postings</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,18 +15,15 @@
             <%= current_user.username %>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/">Home Page</a></li>
-            <li><a class="dropdown-item" href= "/jobs">Job Postings</li>
             <li><%= link_to 'Logout', logout_path, class: 'dropdown-item', method: 'delete' %>
             </a></li>
           </ul>
         </li>
         <% else %>
         <a class="logo-image" ><img src="/images/usain_git.png" width="50"></a>
+        <a class="navbar-brand">GitJobs</a>
             <a class="nav-link" href="/signup">Sign Up</a>
             <a class="nav-link" href="/login">Login</a>
     <% end %>
       </ul>
-    </div>
-  </div>
 </nav>
