Fixed home page list error and styled forms

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,12 +3,14 @@
 <%= render partial: 'errors/errors', locals: {model: @user} if @user %>
 <%= form_for :user, url: '/users' do |f| %>
     <%= f.label :username %>
-    <%= f.text_field :username %><br><br>
+    <%= f.text_field :username, class: "form-control input-sm" %><br><br>
     <%= f.label :email %>
-    <%= f.text_field :email %><br><br>
+    <%= f.text_field :email, class: "form-control col-sm-3" %><br><br>
     <%= f.label :password %>
-    <%= f.text_field :password %><br><br>
-    Password Confirmation <%= f.text_field :password_confirmation %><br><br>    <%= f.submit "Submit" %>
+    <%= f.text_field :password, class: "form-control" %><br><br>
+    Password Confirmation <%= f.text_field :password_confirmation, class: "form-control" %>
+    <br><br>    
+  <%= f.submit "Submit"%>
   <% end %> 
 
   <br>
