--- a/app/views/reviews/_fields_for.html.erb
+++ b/app/views/reviews/_fields_for.html.erb
@@ -1,1 +1,1 @@
-<br><%= f.collection_select(:job_id, Job.all, :id, :title) %>
+<br><%= f.collection_select(:job_id, Job.all, :id, :title,{:prompt => "Select Job For This Review"}, {:class => 'form-control'})%>
