--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,8 +1,1 @@
-<%= form_with(model: [@job, @review]) do |f| %>
-    <%= f.label :title %>
-    
-    <%= f.text_field :title %><br>
-    <%= f.label :content %>
-    <%= f.text_area :content %>
-    <%= f.submit 'Create Review' %>
-    <% end %>
+<%= render 'form' %>
