--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,3 @@
 
 <%= render partial: 'errors/errors', locals: {model: @review} %>
-<%= form_with(model: [@job, @review]) do |f| %>
-    <%= f.label :title %><br>
-    <%= f.text_field :title, class: "form-control" %><br>
-    <%= f.label :content %><br>
-    <%= f.text_area :content, class: "form-control"%><br>
-    <%= fields_for_helper(f)%><br><br>
-    <%= f.submit 'Create Review' %>
-    <% end %>
+<%= render 'form' %>
