--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create Account</h1>
 <br>
 <%= render partial: 'errors/errors', locals: {model: @user} if @user %>
-<%= form_for :user, url: '/users' do |f| %>
+<%= form_for :user, url: '/signup' do |f| %>
     <%= f.label :username %>
     <%= f.text_field :username, class: "form-control input-sm" %><br><br>
     <%= f.label :email %>
