Added appropriate redirects

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,8 +7,8 @@
     <%= f.label :email %>
     <%= f.text_field :email, class: "form-control col-sm-3" %><br><br>
     <%= f.label :password %>
-    <%= f.text_field :password, class: "form-control" %><br><br>
-    Password Confirmation <%= f.text_field :password_confirmation, class: "form-control" %>
+    <%= f.text_field :password, class: "form-control col-sm-3" %><br><br>
+    Password Confirmation <%= f.text_field :password_confirmation, class: "form-control col-sm-3" %>
     <br><br>    
   <%= f.submit "Submit"%>
   <% end %> 
